# player

client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.vue  main.ts
client/src/router/: index.ts
client/src/stores/: video.ts
client/src/utils/: index.ts
client/src/views/: list.vue  video.vue
server/: Cargo.toml  config.toml
server/app/: config.toml
server/src/: ip_addrs.rs  lib.rs  main.rs  res.rs
server/src/middleware/: logger.rs
