[package]
name = "player-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

tokio = { version = "1.27.0", features = ["full"] }
axum = { version = "0.6.15" }
tower-http = { version = "0.4.0", features = ["fs"] }

colored = "2.0.0"
chrono = "0.4.24"
percent-encoding = "2.2.0"