[package]
name = "player-web"
version = "0.1.0"
edition = "2021"
# build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

tokio = { version = "1.27.0", features = ["full"] }
axum = { version = "0.6.15" }
tower-http = { version = "0.4.0", features = ["fs"] }

# 字体颜色库
colored = "2.0.0"
# 时间库
chrono = "0.4.24"
# URI 编码库
percent-encoding = "2.2.0"
# IP 地址查看库
if-addrs = "0.10.1"

[build-dependencies]
winres="0.1.12"